[gd_scene load_steps=9 format=3 uid="uid://cci6dwxmbapt1"]

[ext_resource type="Script" uid="uid://bwcj7kcis430l" path="res://addons/inventory-system-demos/ui/craft/craft_station_ui.gd" id="1_ny8hp"]
[ext_resource type="PackedScene" uid="uid://duq60fhdry5hv" path="res://addons/inventory-system-demos/ui/craft/recipe_ui.tscn" id="2_jgmgq"]
[ext_resource type="Script" uid="uid://1xhu1ilcqq5y" path="res://addons/inventory-system-demos/ui/craft/craftings_ui.gd" id="3_imm8o"]
[ext_resource type="PackedScene" uid="uid://db7sndy7hfpq2" path="res://addons/inventory-system-demos/ui/craft/crafting_ui.tscn" id="4_5nmfv"]
[ext_resource type="PackedScene" uid="uid://cxevor61mdhtc" path="res://addons/inventory-system-demos/ui/grid/grid_slot_ui.tscn" id="4_y7p0v"]
[ext_resource type="Script" uid="uid://ctu3vfl53whl3" path="res://addons/inventory-system-demos/ui/grid/grid_inventory_ui.gd" id="5_ce7df"]
[ext_resource type="PackedScene" uid="uid://ch1ixmsfcaf5c" path="res://addons/inventory-system-demos/ui/grid/grid_item_stack_ui.tscn" id="5_v57bc"]
[ext_resource type="StyleBox" uid="uid://da318y6qn0f4e" path="res://addons/inventory-system-demos/grid_example/grid_item_stack_selection_style_box.tres" id="7_wbpus"]

[node name="CraftStationUI" type="Control"]
custom_minimum_size = Vector2(474, 512)
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -116.0
offset_right = 490.0
offset_bottom = 396.0
grow_vertical = 2
script = ExtResource("1_ny8hp")
recipe_ui_scene = ExtResource("2_jgmgq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="RecipesUI" type="Panel" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(406, 256)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/RecipesUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer2/RecipesUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="Title" type="MarginContainer" parent="HBoxContainer/VBoxContainer2/RecipesUI/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="TitleLabel" type="Label" parent="HBoxContainer/VBoxContainer2/RecipesUI/VBoxContainer/Panel/Title"]
unique_name_in_owner = true
layout_mode = 2
text = "Recipes"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer2/RecipesUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/RecipesUI/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer2/RecipesUI/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="RecipesContent" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/RecipesUI/VBoxContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OutputGridInventoryUI" type="Control" parent="HBoxContainer/VBoxContainer2/RecipesUI/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("5_ce7df")
grid_slot_ui_scene = ExtResource("4_y7p0v")
grid_item_stack_ui_scene = ExtResource("5_v57bc")
grid_slot_size = Vector2(48, 48)

[node name="InputGridInventoryUI" type="Control" parent="HBoxContainer/VBoxContainer2/RecipesUI/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("5_ce7df")
grid_slot_ui_scene = ExtResource("4_y7p0v")
grid_item_stack_ui_scene = ExtResource("5_v57bc")
grid_slot_size = Vector2(48, 48)
item_spacing = 2
selection_style = ExtResource("7_wbpus")

[node name="CraftingsUI" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
alignment = 2
script = ExtResource("3_imm8o")
crafting_ui_scene = ExtResource("4_5nmfv")
